--- a/lections/lection_13_BOM_DOM/materials/styles.css
+++ b/lections/lection_13_BOM_DOM/materials/styles.css
@@ -15,3 +15,25 @@
 #foo.block div ~ * {
     color: red;
 }
+
+
+.block-item {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100px;
+    height: 100px;
+    transition: .5s;
+}
+
+.block-item:nth-child(1) {
+    background-color: red;
+}
+
+.block-item:nth-child(2) {
+    background-color: green;
+}
+
+.block-item:nth-child(3) {
+    background-color: blue;
+}
